--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,14 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <style>
+	.marker {
+	  background-image: url('mapbox-icon.png');
+	  background-size: cover;
+	  width: 50px;
+	  height: 50px;
+	  border-radius: 50%;
+	  cursor: pointer;
+	}
+	</style>
 </html>
