icons for resources updated
use maki icons.

--- a/public/index.html
+++ b/public/index.html
@@ -41,11 +41,35 @@
     -->
   </body>
   <style>
-	.marker {
-	  background-image: url('mapbox-icon.png');
+	.marker_hospital {
+	  background-image: url('hospital.svg');
 	  background-size: cover;
-	  width: 50px;
-	  height: 50px;
+	  width: 20px;
+	  height: 20px;
+	  border-radius: 50%;
+	  cursor: pointer;
+	}
+	.marker_firestation {
+	  background-image: url('fire-station.svg');
+	  background-size: cover;
+	  width: 20px;
+	  height: 20px;
+	  border-radius: 50%;
+	  cursor: pointer;
+	}
+	.marker_garda {
+	  background-image: url('police.svg');
+	  background-size: cover;
+	  width: 20px;
+	  height: 20px;
+	  border-radius: 50%;
+	  cursor: pointer;
+	}
+	.marker_safehouse {
+	  background-image: url('shelter.svg');
+	  background-size: cover;
+	  width: 20px;
+	  height: 20px;
 	  border-radius: 50%;
 	  cursor: pointer;
 	}
