map: add bus marker

--- a/public/index.html
+++ b/public/index.html
@@ -73,5 +73,13 @@
 	  border-radius: 50%;
 	  cursor: pointer;
 	}
+	.marker_bus {
+	  background-image: url('bus.svg');
+	  background-size: cover;
+	  width: 30px;
+	  height: 30px;
+	  border-radius: 50%;
+	  cursor: pointer;
+	}
 	</style>
 </html>
